Fixed Alignment and Mobile View Issues

--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,17 @@
 
 }
 
+.header-title {
+	font-size: 100px;
+	font-weight: 200;
+}
+
 .header-content-inner {
 	text-align: center;
 	font-color: white;
 	color: white;
-	}
+    padding: 350px 50px 250px 50px;
+}
 
 .header .header-content {
 	position: absolute;
@@ -67,32 +73,26 @@
 	transform: translateY(-50%);
 }
 
-	.header .header-content .header-content-inner .h1 {
+.header .header-content .header-content-inner .h1 {
 		font-size: 100px;
 }
 
-	.header .header-content .header-content-inner .p {
+.header .header-content .header-content-inner .p {
 		margin-right: auto;
 		margin-left: auto;
 		max-width: 80%;
 		font-size: 18px;
-	}
 }
-.col-lg-8 {
-	margin-top: 50px;
-	margin-left: 200px;
-}
-
 
 .intro {
 	color: #fff;
 	background-color: yellowgreen;
-	padding: 70px 0;
+	padding: 70px 0px 50px 350px;
 	text-align: center;
 }
 
 .content {
-	padding: 100px 0;
+	padding: 70px 0px;
 }
 
 .content-2 {
@@ -101,17 +101,19 @@
 	text-align: left;
 }
 
-
 .content-3 {
 	padding: 20px 0 40ox;
 	text-align: center;
 }
 
 .img-circle {
-	border-radius: 50%;
-	width: 85%;
+	border-radius: 55%;
+	width: 90%;
 }
 
+.container-fluid {
+	padding: 0;
+}
 
 .promo,
 .promo h3,
@@ -163,7 +165,7 @@
 .item-2,
 .item-3 {
 	background-size: cover;
-	background-position: 50% 50%;
+	background-position:50% 50%;
 	height: 20vh;
     width: 100vw;
 }
@@ -205,89 +207,9 @@
 	color: rgba(255, 255, 255, .7);
 }
 
-.navbar-default {
-    border-color: rgba(34,34,34,.05);
-    background-color: #fff;
-    -webkit-transition: all .35s;
-    -moz-transition: all .35s;
-    transition: all .35s;
+.nav-item {
+	text-align: right;
 }
-
-.navbar .sticky-top .navbar-expand-lg .navbar-light .bg-light {
-	color: yellowgreen;
-}
-
-.navbar .navbar-brand .navbar-expand-lg :hover,
-.navbar .navbar-brand .navbar-expand-lg :focus {
-	color: #eb3812;
-}
-
-.navbar .nav > li>a,
-.navbar .nav>li>a:focus {
-	color: #222;
-}
-
-.navbar .nav > li>a:hover,
-.navbar .nav>li>a:focus:hover {
-	color: yellowgreen;
-}
-
-.navbar .nav > li.active>a,
-.navbar .nav>li.active>a:focus {
-	color: yellowgreen!important;
-	background-color: transparent;
-}
-
-.navbar .nav > li.active>a:hover,
-.navbar .nav>li.active>a:focus:hover {
-	background-color: transparent;
-}
-
-	.navbar-default .navbar-brand:hover,
-	.navbar-default .navbar-brand:focus {
-		color: #fff;
-	}
-
-	.navbar .nav > li>a,
-	.navbar .nav>li>a:focus {
-		color: rgba(255, 255, 255, .7);
-	}
-
-	.navbar .nav > li>a:hover,
-	.navbar .nav>li>a:focus:hover {
-		color: #fff;
-	}
-
-	.navbar.affix {
-		border-color: #fff;
-		background-color: #fff;
-		box-shadow: 0px 7px 20px 0px rgba(0, 0, 0, 0.1);
-	}
-
-	.navbar.affix .navbar-brand {
-		letter-spacing: 0;
-		color: yellowgreen;
-	}
-
-	.navbar.affix .navbar-brand:hover,
-	.navbar-default.affix .navbar-brand:focus {
-		color: #eb3812;
-	}
-
-	.navbar.affix .nav > li>a,
-	.navbar .nav>li>a:focus:hover {
-		color: yellowgreen;
-	}
-	.container{
-		display: flex;
-		flex-direction: row;
-		flex-wrap: nowrap;
-		justify-content: center;
-		justify-content: center;
-		align-content: center;
-		align-items: center;
-
-	}
 
 .btn-default {
 	border-color: #fff;
@@ -317,29 +239,29 @@
 
 .btn-default.disabled,
 .btn-default[disabled],
-fieldset [disabled] .btn-default,
+.fieldset [disabled] .btn-default,
 .btn-default.disabled:hover,
 .btn-default[disabled]:hover,
-fieldset[disabled] .btn-default:hover,
+.fieldset[disabled] .btn-default:hover,
 .btn-default.disabled:focus,
 .btn-default[disabled]:focus,
-fieldset[disabled] .btn-default:focus,
+.fieldset[disabled] .btn-default:focus,
 .btn-default.disabled.focus,
 .btn-default[disabled].focus,
-fieldset[disabled] .btn-default.focus,
+.fieldset[disabled] .btn-default.focus,
 .btn-default.disabled:active,
 .btn-default[disabled]:active,
-fieldset[disabled] .btn-default:active,
+.fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
-fieldset[disabled] .btn-default.active {
+.fieldset[disabled] .btn-default.active {
     border-color: #fff;
     background-color: #fff;
 }
 
 .btn-primary .badge {
-    color: yellowgreen;
     background-color: #fff;
+    color: yellowgreen;
 }
 
 
@@ -378,6 +300,7 @@ img::-moz-selection {
     color: yellowgreen;
 }
 
-.bg-primary {
+.btn-primary {
+	border-color: yellowgreen;
     background-color: yellowgreen;
 }
